trunk/Archive2/f5/7d79c5be2b70b2/output
main.cpp: In function 'std::ostream& operator<<(std::ostream&, const std::vector<T>&)':
main.cpp:9:6: error: 'hkjhk' was not declared in this scope
     {hkjhk
      ^
main.cpp:10:9: error: expected ';' before 'os'
         os << el << ' ';
         ^
main.cpp:12:5: error: 'retrun' was not declared in this scope
     retrun os;
     ^
main.cpp:12:12: error: expected ';' before 'os'
     retrun os;
            ^
main.cpp:13:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
main.cpp: In instantiation of 'std::ostream& operator<<(std::ostream&, const std::vector<T>&) [with T = std::basic_string<char>; std::ostream = std::basic_ostream<char>]':
main.cpp:20:18:   required from here
main.cpp:8:16: warning: unused variable 'el' [-Wunused-variable]
     for (auto& el : vec)
                ^
